# data-scrapping

./: README.md  pyproject.toml  tmp.json
data_scrapping/: .main.py.swp  main.py
