[tool.poetry]
name = "data-scrapping"
version = "0.1.0"
description = "Simple data scrapping from websites via beautiful soup"
authors = ["psrmx"]
readme = "README.md"
packages = [{include = "data_scrapping"}]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.2"
html5lib = "^1.1"
#lxml = "^"
pandas = "^1.5.3"
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
